fix(menu): prevent overflow of separator lines

--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -33,8 +33,8 @@ menu {
       border-top: var(--border-width) solid var(--c-border-variant);
       color: var(--c-fg-variant);
       font-weight: var(--font-weight-medium);
-      margin: 0.375rem -0.5rem 0;
-      padding: 0.75rem 1.5rem 0.375rem;
+      margin: 0.375rem 0 0;
+      padding: 0.75rem 1rem 0.375rem;
 
       &:first-child {
         border-top: none;
